...
) {
    LazyColumn(
        contentPadding = PaddingValues(
            horizontal = 10.dp,
            vertical = 10.dp
        ),
        modifier = modifier.testTag("upcoming:movies")
    ) {
        items(count = movies.itemCount) { index ->
            val movie = movies[index]
            movie?.let {
                MovieListCell(
                    modifier = Modifier
...
