...
                    Text(it)
                }
            }
        )
        BackButton(
            modifier = Modifier
                .testTag("back_button")
                .statusBarsPadding()
                .padding(horizontal = 20.dp, vertical = 20.dp)
                .size(36.dp)
                .background(
                    color = MovieTrendsTheme.colors.uiBackground.copy(alpha = 0.32f),
                    shape = CircleShape
...
